--- a/SampleApplication/SampleApplication/package.json
+++ b/SampleApplication/SampleApplication/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "grunt": "^0.4.5",
+    "grunt-connect": "^0.2.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
@@ -16,6 +17,9 @@
     "grunt-open": "^0.2.3",
     "grunt-ts": "^3.0.0",
     "grunt-tsd": "^0.2.0-beta.1",
+    "grunt-wiredep": "^2.0.0",
+    "load-grunt-tasks": "^3.1.0",
+    "time-grunt": "^1.1.0",
     "tsd": "^0.5.7",
     "typescript": "^1.4.1"
   }
