--- a/.gitignore
+++ b/.gitignore
@@ -157,7 +157,6 @@ ClientBin/
 *.dbproj.schemaview
 *.pfx
 *.publishsettings
-node_modules/
 
 # RIA/Silverlight projects
 Generated_Code/
@@ -184,3 +183,9 @@ FakesAssemblies/
 
 # Typescript
 .tscache
+
+# node
+node_modules/
+
+# bower
+bower_components/
