--- a/SampleApplications/NestedViews/package.json
+++ b/SampleApplications/NestedViews/package.json
@@ -15,12 +15,12 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-open": "^0.2.3",
-    "grunt-ts": "^3.0.0",
+    "grunt-ts": "latest",
     "grunt-tsd": "^0.2.0-beta.1",
     "grunt-wiredep": "^2.0.0",
     "load-grunt-tasks": "^3.1.0",
     "time-grunt": "^1.1.0",
     "tsd": "^0.5.7",
-    "typescript": "^1.4.1"
+    "typescript": "latest"
   }
 }
