--- a/Examples/Basics/tsconfig.json
+++ b/Examples/Basics/tsconfig.json
@@ -8,6 +8,7 @@
         "emitDecoratorMetadata": true
     }, 
     "files": [
-        "Basic.ts"
+        "Basic.ts",
+        "test.ts"
     ]
 }
