Updated Readme and ignored files in bower.json

--- a/bower.json
+++ b/bower.json
@@ -29,6 +29,10 @@
         "**/.*",
         "node_modules",
         "bower_components",
-        "Tests"
+        "Tests",
+        "SampleApplications",
+        "Reference",
+        "Examples",
+        "index.html"
     ]
 }
