--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
         "orange.js",
         "orange.d.ts"
     ],
-    "version": "0.5.3-beta4",
+    "version": "0.5.4",
     "homepage": "https://github.com/Infviz/Orange",
     "authors": [
         "Markus Johnsson <markus.johnsson@infviz.com>",
