--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,13 @@
 		"declaration": true,
 		"target": "es5",
 		"noImplicitAny": true,
-		"removeComments": true
+		"removeComments": true,
+		"lib": [
+			"dom",
+			"es5",
+			"scripthost",
+			"es2015.promise"
+		]
 	},
 	"files": [
 		"Orange/_references.ts"
