Added React example with DI

--- a/Examples/React/tsconfig.json
+++ b/Examples/React/tsconfig.json
@@ -4,6 +4,8 @@
         "module": "system",
         "outFile": "index.js",
         "target": "es5",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
         "lib": [
             "dom",
             "es2015",
