--- a/Examples/React/package.json
+++ b/Examples/React/package.json
@@ -10,6 +10,7 @@
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "reflect-metadata": "^0.1.10"
   }
 }
